--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+
+<% if user_signed_in? %>
+<ul>
+  <li><%= link_to 'Submit Link', new_link_path %></li>
+  <li><%= link_to 'Account', edit_user_registration_path%></li>
+  <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete%></li>
+</ul>
+<%else%>
+<ul>
+  <li><%= link_to 'Sign up', new_user_registration_path %></li>
+  <li><%= link_to 'Sign in', new_user_session_path %></li>
+</ul>
+<% end %>
+
 <% flash.each do |name, msg| %>
 <%= content_tag(:div, msg, class: "alert-#{name}")%>
 <% end %>
