--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -12,3 +12,15 @@
   <%= link_to 'Delete', @link, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-default" %>
 </div>
 <% end %>
+
+
+<div class ="btn-group pull-right">
+  <% if logged_in? && !@link.votes.where(user_id: current_user.id).exists? %>
+  <%= link_to upvote_link_path(@link), method: :post, class: "btn btn-default btn-sm" do %>
+  <i class="glyphicon glyphicon-chevron-up"></i>
+  Upvote
+  <% end %>
+  <% end %>
+  <div class="row pull-right"><strong>Votes:</strong> <%= @link.votes.count %></div>
+</div>
+</div>
