--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1><a href="<%= @link.url %>"> <%= @link.title %> </a> <br> <small> Submitted by <%= @link.user.email %></small></h1>
+  <h1><a href="<%= @link.url %>"> <%= @link.title %> </a> <br> <small> Submitted by <%= @link.user.name %></small></h1>
 </div>
 
 <div class="btn-group">
@@ -21,12 +21,12 @@
   Upvote
   <% end %>
   <% end %>
-  <div class="row pull-right"><strong>Votes:</strong> <%= @link.votes.count %></div>
 </div>
 </div>
 
 <h3 class="comments_title">
   <%= @link.comments.count %> Comments
+  <div class="row pull-right"> Votes: <%= @link.votes.count %></div>
 </h3>
 
 <div id="comments">
