--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,7 +2,7 @@
 <div class="link row clearfix">
   <h2>
     <%= link_to link.title, link %>
-    <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.name %></small>
+    <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> ago by <%= link.user.name %></small>
   </h2>
   <div class ="btn-group">
     <a class="btn btn-default btn-sm" href="<% link.url %>">Visit Link</a>
@@ -16,3 +16,12 @@
   </div>
 </div>
 <% end %>
+
+<h3>
+<% unless @page == 1%>
+<%= link_to 'Previous Page', page: @page - 1 %>
+<% end %>
+<% unless @page == 4 %>
+<%= link_to 'Next Page', page: @page +1 %>
+<% end %>
+</h3>
